<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>it.eng.mig</groupId>
	<artifactId>siesWeb</artifactId>
	<packaging>war</packaging>
	<version>1.0</version>

	<name>SIESWeb</name>

	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<java.version>21</java.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>

	<dependencies>
		<!-- Oracle JDBC Driver -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<version>23.6.0.24.10</version>
		</dependency>

		<!-- Oracle UCP (Universal Connection Pool) - includes OracleDataSource -->
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ucp</artifactId>
			<version>23.6.0.24.10</version>
		</dependency>

		<!-- Servlet API -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- JSP API -->
		<dependency>
			<groupId>javax.servlet.jsp</groupId>
			<artifactId>javax.servlet.jsp-api</artifactId>
			<version>2.3.3</version>
			<scope>provided</scope>
		</dependency>

		<!-- JSTL -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Log4j 2 (migrated from Log4j 1.x for security) -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.24.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.24.3</version>
		</dependency>
		<!-- Log4j 1.x bridge for backward compatibility -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-1.2-api</artifactId>
			<version>2.24.3</version>
		</dependency>

		<!-- JBoss/Jakarta EE dependencies (provided by JBoss EAP) -->
		<dependency>
			<groupId>javax.ejb</groupId>
			<artifactId>javax.ejb-api</artifactId>
			<version>3.2.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>javax.annotation</groupId>
			<artifactId>javax.annotation-api</artifactId>
			<version>1.3.2</version>
			<scope>provided</scope>
		</dependency>

		<!-- JUnit for testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>

		<!-- Apache POI for Excel (upgraded to 5.3.0 to match Tika transitive dependency) -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>5.3.0</version>
		</dependency>

		<!-- commons-io: override transitive version to one available in local cache -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.16.1</version>
		</dependency>

		<!-- Commons FileUpload -->
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.5</version>
		</dependency>

		<!-- Apache Commons Lang -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>

		<!-- MyBatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.5.16</version>
		</dependency>

		<!-- Apache Tika for file parsing -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<version>2.9.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers-standard-package</artifactId>
			<version>2.9.2</version>
		</dependency>

		<!-- JAXB Runtime (for XML binding) -->
		<dependency>
			<groupId>jakarta.xml.bind</groupId>
			<artifactId>jakarta.xml.bind-api</artifactId>
			<version>3.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>3.0.2</version>
		</dependency>

		<!-- JAX-WS API (for web services) -->
		<dependency>
			<groupId>jakarta.xml.ws</groupId>
			<artifactId>jakarta.xml.ws-api</artifactId>
			<version>3.0.1</version>
		</dependency>

		<!-- Base64 encoding (replacement for sun.misc.BASE64Encoder/Decoder) -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.17.1</version>
		</dependency>

		<!-- Legacy JAR dependencies from WEB-INF/lib -->
		<dependency>
			<groupId>org.apache.axis</groupId>
			<artifactId>axis</artifactId>
			<version>1.4</version>
		</dependency>

		<dependency>
			<groupId>javax.xml</groupId>
			<artifactId>jaxrpc-api</artifactId>
			<version>1.1</version>
		</dependency>

		<dependency>
			<groupId>windward</groupId>
			<artifactId>windward-reports</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/WindwardReports.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>jasper</groupId>
			<artifactId>jasper</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/jasper.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>xerces</groupId>
			<artifactId>xercesImpl</artifactId>
			<version>2.12.2</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.soap</groupId>
			<artifactId>saaj-api</artifactId>
			<version>1.3.5</version>
		</dependency>

		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
		</dependency>

		<dependency>
			<groupId>commons-discovery</groupId>
			<artifactId>commons-discovery</artifactId>
			<version>0.5</version>
		</dependency>

		<dependency>
			<groupId>javax.jms</groupId>
			<artifactId>javax.jms-api</artifactId>
			<version>2.0.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>

		<!-- Use standard Maven dependency for activation API instead of system scope -->
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>sun-messaging</groupId>
			<artifactId>imq</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/imq.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>sun-messaging</groupId>
			<artifactId>imqjmx</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/imqjmx.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>opensaml</artifactId>
			<version>2.2.3</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/opensaml-2.2.3.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.opensaml</groupId>
			<artifactId>xmltooling</artifactId>
			<version>1.2.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/xmltooling-1.2.0.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.12.7</version>
		</dependency>

		<dependency>
			<groupId>org.apache.santuario</groupId>
			<artifactId>xmlsec</artifactId>
			<version>1.5.8</version>
		</dependency>

		<!-- SIES XMLBeans generated classes -->
		<dependency>
			<groupId>it.mig.sies</groupId>
			<artifactId>sies_v2</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/sies_v2.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>it.mig.sies</groupId>
			<artifactId>sies_ese</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/sies_ese.jar</systemPath>
		</dependency>

		<!-- XMLBeans libraries -->
		<dependency>
			<groupId>org.apache.xmlbeans</groupId>
			<artifactId>xmlbeans</artifactId>
			<version>3.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlbeans</groupId>
			<artifactId>jsr173-api</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/jsr173_1.0_api_XMLBEANS.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlbeans</groupId>
			<artifactId>xmlbeans-qname</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/xmlbeans-qname_XMLBEANS.jar</systemPath>
		</dependency>

		<!-- Quartz Scheduler -->
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.3.2</version>
		</dependency>

		<!-- iText for PDF generation -->
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>2.1.7</version>
		</dependency>

		<!-- Apache HttpClient (old version) -->
		<dependency>
			<groupId>commons-httpclient</groupId>
			<artifactId>commons-httpclient</artifactId>
			<version>3.1</version>
		</dependency>

		<!-- SIPPI service client -->
		<dependency>
			<groupId>it.mig.sippi</groupId>
			<artifactId>sippi</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/defaultroot/WEB-INF/lib/sippi.jar</systemPath>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>ISO-8859-1</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<warSourceDirectory>defaultroot</warSourceDirectory>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
		<finalName>siesWeb</finalName>
	</build>

</project>
